--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,9 @@ galaxy_info:
     - name: "EL"
       versions:
         - 'all'
+    - name: "ArchLinux"
+      versions:
+        - 'all'
   galaxy_tags:
     - 'network'
 dependencies: []
