--- a/tasks/pre_requisite.yml
+++ b/tasks/pre_requisite.yml
@@ -3,6 +3,9 @@
   ansible.builtin.set_fact:
     iproute_tables: "{{ hostvars[inventory_hostname]['iproute'] |
       community.general.json_query('[].tables[]') }}"
+  when:
+    - "hostvars[inventory_hostname]['iproute'] is defined"
+    - "hostvars[inventory_hostname]['iproute'] not in ['', [], '[]', None]"
 - name: "iproute | Create catalogs"
   ansible.builtin.file:
     path: "/etc/iproute2"
@@ -11,7 +14,5 @@
     group: "root"
     mode: "0755"
   when:
-    - "vars['iproute_tables'] is defined"
-    - "vars['iproute_tables'] != []"
-    - "vars['iproute_tables'] != ''"
-    - "vars['iproute_tables'] != None"
+    - "lookup('ansible.builtin.vars', 'iproute_tables',
+      default='') not in ['', [], '[]', None]"
